--- a/smacofManual.tex
+++ b/smacofManual.tex
@@ -193,10 +193,10 @@
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
-\title{Smacof at 50\\
-A Manual}
+\title{Smacof at 50: A Manual\\
+Part 1: Smacof with Splines}
 \author{Jan de Leeuw - University of California Los Angeles}
-\date{Started February 21 2024, Version of March 28, 2024}
+\date{Started February 21 2024, Version of March 30, 2024}
 
 \begin{document}
 \maketitle
