--- a/smacofManual.tex
+++ b/smacofManual.tex
@@ -194,9 +194,9 @@
   pdfcreator={LaTeX via pandoc}}
 
 \title{Smacof at 50: A Manual\\
-Part 1: Smacof with Splines}
+Part 1: Smacof with B-Splines}
 \author{Jan de Leeuw - University of California Los Angeles}
-\date{Started February 21 2024, Version of March 30, 2024}
+\date{Started February 21 2024, Version of March 31, 2024}
 
 \begin{document}
 \maketitle
@@ -208,7 +208,7 @@ TBD
 \setcounter{tocdepth}{4}
 \tableofcontents
 }
-\textbf{Note:} This is a working paper which will be expanded/updated
+\textbf{Note:} This is a working manuscript which will be expanded/updated
 frequently. All suggestions for improvement are welcome. All Rmd, tex,
 html, pdf, R, and C files are in the public domain. Attribution will be
 appreciated, but is not required. The files can be found at
@@ -239,15 +239,20 @@ in which some dissimilarities are known numbers while others are
 unknown. MDS with missing data is a form of \emph{distance matrix completion}
 (Fang and O'Leary (2012)).
 
-\subsection{Kruskal's Stress}\label{kruskals-stress}
+\section{Krukal's Stress}\label{krukals-stress}
 
 In the pioneering papers Kruskal (1964a) and Kruskal (1964b) the MDS problem
 was formulated for the first time as minimization of an explicit loss
 function, which measures the quality of the approximation of the
-dissimilarities by the distances. The loss function in least squares
+dissimilarities by the distances.
+
+\subsection{Metric MDS}\label{metric-mds}
+
+The loss function in least squares
 metric Euclidean MDS is called \emph{raw stress} or \emph{Kruskal's raw stress}
-and is defined as \begin{equation}
-\sigma(X):=\frac12\sum w_{ij}(\delta_{ij}-d_{ij}(X))^2.
+and is defined as
+\begin{equation}
+\sigma_R(X):=\frac12\sum w_{ij}(\delta_{ij}-d_{ij}(X))^2.
 \label{eq:stressdef}
 \end{equation}
 
@@ -257,7 +262,8 @@ The symbol \(:=\) is used for definitions. In definition
 objects \(o_i\) and \(o_j\), and the \(d_{ij}(X)\) are the \emph{distances} between
 the corresponding points \(x_i\) and \(x_j\). The summation is over all
 \(\binom{n}{2}\) pairs \((i,j)\) with \(j>i\), i.e.~over elements below the
-diagonal of the matrices \(W\) and \(\Delta\). From now on we use ``metric
+diagonal of the matrices \(W\) and \(\Delta\). The subscript \(R\) in \(\sigma_R\)
+stands for ``raw''. From now on we use ``metric
 MDS'' to mean Least Squares Metric Euclidean MDS.
 
 The \(n\times p\) matrix \(X\), which has the coordinates \(x_i\) of the \(n\)
@@ -275,9 +281,7 @@ precision or importance of the corresponding dissimilarities. Some of
 the weights may be zero, which can be used to code \emph{missing data}. If
 all weights are positive we have \emph{complete data}. If we have complete
 data, and all weights are equal to one, we have \emph{unweighted} metric MDS.
-Weights were only introduced in MDS in De Leeuw (1977), the pioneering
-papers by Shepard, Kruskal, and Guttman only consider the unweighted
-case.
+The pioneering papers by Shepard, Kruskal, and Guttman only consider the unweighted case. Weights were only introduced in MDS in De Leeuw (1977).
 
 We assume throughout that the weights are \emph{irreducible} (De Leeuw (1977)).
 This means there is no partitioning of the index set
@@ -293,6 +297,8 @@ well (they are assumed to be equal to the corresponding elements below
 the diagonal). The somewhat mysterious factor \(\frac12\) in definition
 \eqref{eq:stressdef} is there because it simplifies some of the formulas
 in later sections of this paper.
+
+\subsection{Non-metric MDS}\label{non-metric-mds}
 
 Kruskal was not really interested in metric MDS and the ``raw'' loss
 function \eqref{eq:stressdef}. His papers are really about non-metric
@@ -310,78 +316,87 @@ transformations). If the dissimilarities are non-numerical, for example
 rank orders or partitionings, we choose from the set of admissible
 \emph{quantifications}.
 
-In non-metric MDS the loss function becomes \begin{equation}
-\sigma(X,\hat D):=\frac12\sum w_{ij}(\hat d_{ij}-d_{ij}(X))^2,
+In non-metric MDS raw stress becomes
+\begin{equation}
+\sigma_R(X,\Delta):=\frac12\sum w_{ij}(\delta_{ij}-d_{ij}(X))^2,
 \label{eq:rawstressdef}
-\end{equation} where \(\hat D\) are now the quantified or transformed
+\end{equation}
+where \(\Delta\) varies over the quantified or transformed
 dissimilarities. In MDS parlance they are also called \emph{pseudo-distances}
 or \emph{disparities}. Loss function \eqref{eq:rawstressdef} must be minimized
 over both configurations and disparities, with the condition that the
-disparities \(\hat D\) are an admissible transformation of the
-dissimilarities \(\Delta\). In Kruskal's non-metric MDS this means
+disparities \(\Delta\) are an admissible transformation or quantification
+of the data. In Kruskal's non-metric MDS this means
 requiring monotonicity. In this paper we will consider various other
 choices for the set of admissible transformations. We will use the
 symbol \(\mathfrak{D}\) for the set of admissible transformations
 
-The most familiar sets of admissible transformations (linear,
-polynomial, monotone) define convex cones with apex at the origin. This
-means that if \(\hat D\in\mathfrak{D}\) then so is \(\lambda\hat D\) for all
+The most familiar examples of \(\mathfrak{D}\) (linear,
+polynomial, splines, monotone) define convex cones with apex at the origin. This
+means that if \(\Delta\in\mathfrak{D}\) then so is \(\lambda\Delta\) for all
 \(\lambda\geq 0\). But consequently minimizing \eqref{eq:rawstressdef} over
-all \(\hat D\in\mathfrak{D}\) and over all configurations has the trivial
-solution \(\hat D=0\) and \(X=0\), corresponding with the global minimum
-\(\sigma(X,\hat D)=0\). We need additional constraints to rule out this
+all \(\Delta\in\mathfrak{D}\) and over all configurations has the trivial
+solution \(\Delta=0\) and \(X=0\), corresponding with the global minimum
+\(\sigma(X,\Delta)=0\). We need additional constraints to rule out this
 trivial solution, and in non-metric MDS this is done by choosing a
 \emph{normalization} that keeps the solution away from zero.
 
-Kruskal's solution is to normalize the raw stress by defining
+Kruskal's original solution is to define \emph{normalized stress} as
 \begin{equation}
-\sigma(X,\Delta):=\frac{\sum w_{ij}(\hat d_{ij}-d_{ij}(X))^2}{\sum w_{ij}d_{ij}^2(X)}.
+\sigma(X,\Delta):=\frac{\sum w_{ij}(\delta_{ij}-d_{ij}(X))^2}{\sum w_{ij}d_{ij}^2(X)}.
 \label{eq:nstressdef}
-\end{equation} In fact in Kruskal's formulation there are no weights,
+\end{equation}
+To be precise, in Kruskal's formulation there are no weights,
 and he actually takes the square root of \eqref{eq:nstressdef} to define
-\emph{Kruskal's stress}. The non-metric Euclidean MDS problem is to minimize
+\emph{Kruskal's stress}. The non-metric Euclidean MDS problem now is to minimize
 loss function \eqref{eq:nstressdef} over all \(n\times p\) configurations
 \(X\) and all admissible disparities \(\Delta\).
 
 \subsection{Normalization}\label{normalization}
 
-Normalization in non-metric MDS has been discussed in detail in
+Equation \eqref{eq:nstressdef} is only one way to normalize raw stress. Some obvious alternatives are discussed in detail in
 Kruskal and Carroll (1969) and De Leeuw (1975). In the terminology of
 De Leeuw (1975) there are \emph{explicit} and \emph{implicit} normalizations.
 
-In implicit normalization we minimize either \begin{equation}
+In implicit normalization we minimize either
+\begin{equation}
 \sigma(X,\hat D):=\frac{\sum  w_{ij}(\hat d_{ij} -d_{ij}(X))^2}{\sum   w_{ij}^{\ }\hat d_{ij}^2}
 \label{eq:implicit1}
-\end{equation} or \begin{equation}
+\end{equation}
+or
+\begin{equation}
 \sigma(X,\hat D):=\frac{\sum   w_{ij}(\hat d_{ij}-d_{ij}(X))^2}{\sum   w_{ij}^{\ }d_{ij}^2(X) }
 \label{eq:implicit2}
-\end{equation} Kruskal (1964a) chooses definition \eqref{eq:implicit2} and
-calls the explicitly normalized loss function \emph{normalized stress}. In
-fact, he takes the square root, which does not change the minimization
-problem, and only considers the unweighted case. Note that we overload
-the symbol \(\sigma\) to denote any one of the least squares loss
+\end{equation}
+over \(X\) and \(\Delta\in\mathfrak{D}\).
+
+As we have seen, Kruskal (1964a) chooses definition \eqref{eq:implicit2} and
+calls the explicitly normalized loss function \emph{normalized stress}. Note that we overload the symbol \(\sigma\) to denote any one of the least squares loss
 functions. It will always be clear from the text which \(\sigma\) we are
 talking about.
 
-In explicit normalization we minimize the raw stress \(\sigma(X,\hat D)\)
-from \eqref{eq:rawstressdef}, but we add the constraint \begin{equation}
+In explicit normalization we minimize the raw stress \(\sigma_R(X,\hat D)\)
+from \eqref{eq:rawstressdef}, but we add the explicit constraint
+\begin{equation}
 \sum   w_{ij}^{\ }d_{ij}^2(X)=1,
 \label{eq:explicit1}
-\end{equation} or the constraint \begin{equation}
+\end{equation}
+or the constraint
+\begin{equation}
 \sum   w_{ij}^{\ }\hat d_{ij}^2=1.
 \label{eq:explicit2}
-\end{equation} Kruskal and Carroll (1969) and De Leeuw (2019) show that these
+\end{equation}
+Kruskal and Carroll (1969) and De Leeuw (2019) show that these
 four normalizations all lead to essentially the same solution for \(X\)
-and \(\hat D\), up to scale factors dictated by the choice of
+and \(\hat D\), up to scale factors dictated by the choice of the particular
 normalization. It is also possible to normalize both \(X\) and \(\hat D\),
 either explicitly or implicitly, and again this will give the same
 solutions, suitably normalized. These invariance results assume the
 admissible transformations form a closed cone with apex at the origin,
 i.e.~if \(\hat D\) is admissible and \(\lambda\geq 0\) then \(\lambda\hat D\)
 is admissible as well. The matrices of Euclidean distances \(D(X)\) form a
-similar closed cone as well. The LSNE-MDS problem is to find an element
-of the \(\hat D\) cone and an element of the \(D(X)\) cone where the angle
-between the two is a small as possible.
+similar closed cone as well. The non-metric MDS problem is to find an element
+of the \(\hat D\) cone \(\mathcal{D}\) and an element of the \(D(X)\) cone where the angle between the two is a small as possible.
 
 In the R version of smacof (De Leeuw and Mair (2009),
 Mair, Groenen, and De Leeuw (2022)) we use explicit normalization
@@ -391,12 +406,9 @@ disparities and the sphere defined by \eqref{eq:explicit2} is equivalent
 to first projecting on the cone and then normalizing the projection (see
 also Bauschke, Bui, and Wang (2018)).
 
-In our version of non-metric MDS we need more flexibility. For
-algorithmic reasons that will become clear later on, we will go with the
-other explicit normalization \eqref{eq:explicit1} and minimize \(\sigma\)
-from \eqref{eq:rawstressdef} over normalized \(X\) and unnormalized
-\(\hat D\). For the final results the choice between \eqref{eq:explicit1}
-and \eqref{eq:explicit2} should not make a difference.
+In the version of non-metric MDS discussed in this manualwe need more flexibility. For algorithmic reasons that may become clear later on, we will go with the original \eqref{eq:nstressdef}, i.e.~with the implicitly normalized
+Kruskal's stress. For the final results the choice between normalizations should not make a difference, but the iterative computations will be different for the
+diufferent choices.
 
 \subsection{Some thoughts on ALS}\label{some-thoughts-on-als}
 
@@ -405,41 +417,54 @@ confusions that have haunted the early development of non-metric MDS.
 
 \subsubsection{The Single-Phase approach}\label{the-single-phase-approach}
 
-In Kruskal (1964a) defines \begin{equation}
+In Kruskal (1964a) defines
+\begin{equation}
 \sigma(X):=\min_{\hat D\in\mathfrak{D}}\ \sigma(\hat D,X)=\sigma(X,\hat D(X)),
 \label{eq:project}
-\end{equation} where \(\sigma(\hat D,X)\) is defined by
-\eqref{eq:implicit2}. where the minimum is over admissible
-transformations. In definition \eqref{eq:project} \begin{equation}
+\end{equation}
+where \(\sigma(\hat D,X)\) is defined by
+\eqref{eq:implicit2}. The minimum in \eqref{eq:project} is over admissible
+transformations. In definition \eqref{eq:project}
+\begin{equation}
 \hat D(X):=\mathop{\text{argmin}}_{\hat D\in\mathfrak{D}}\sigma(X, \hat D).
 \label{eq:optscal}
-\end{equation} Normalized stress defined by \eqref{eq:project} is now a
+\end{equation}
+Normalized stress defined by \eqref{eq:project} is now a
 function of \(X\) only. Under some conditions, which are true in Kruskal's
-definition of non-metric MDS, \begin{equation}
+definition of non-metric MDS, there is a simple relation between the
+partials of \eqref{eq:implicit2} and those of \eqref{eq:project}.
+\begin{equation}
 \mathcal{D}\sigma(X)=\mathcal{D}_1\sigma(X,\hat D(X)),
 \label{eq:partials}
-\end{equation} where \(\mathcal{D}\sigma(X)\) are the derivatives of
+\end{equation}
+where \(\mathcal{D}\sigma(X)\) are the derivatives of
 \(\sigma\) from \eqref{eq:project} and \(\mathcal{D}_1\sigma(X,\hat D(X))\)
 are the partial derivatives of \(\sigma\) from \eqref{eq:implicit2} with
 respect to \(X\). Thus the partials of \(\sigma\) from \eqref{eq:project} can
 be computed by evaluating the partials of \(\sigma\) from
 \eqref{eq:implicit2} with respect to \(X\) at \((X,\hat D(X))\). This has
-created much confusion in the past. The non-metric MDS problem is now to
+created much confusion in the past. The non-metric MDS problem in Kruskal's original formulation is now to
 minimize \(\sigma\) from \eqref{eq:project}, which is a function of \(X\)
 alone.
 
 Guttman (1968) calls this the \emph{single-phase approach}. A variation of
-Kruskal's single-phase approach defines \[
-\sigma(X)=\sum   w_{ij}(d_{ij}^\#(X)-d_{ij}(X))^2
-\] where the \(d_{ij}^\#(X)\) are \emph{Guttman's rank images}, i.e.~the
+Kruskal's single-phase approach defines
+\begin{equation}
+\sigma(X)=\sum w_{ij}(d_{ij}^\#(X)-d_{ij}(X))^2,
+\label{eq:rankimage}
+\end{equation}
+where the \(d_{ij}^\#(X)\) are \emph{Guttman's rank images}, i.e.~the
 permutation of the \(d_{ij}(X)\) that makes them monotone with the
-\(\delta_{ij}\) (Guttman (1968)). Or, alternatively, define \[
-\sigma(X):=\sum   w_{ij}(d_{ij}^\%(X)-d_{ij}(X))^2
-\] where the \(\hat d_{ij}^\%(X)\) are \emph{Shepard's rank images}, i.e.~the
+\(\delta_{ij}\) (Guttman (1968)). Or, alternatively, define
+\begin{equation}
+\sigma(X):=\sum   w_{ij}(d_{ij}^\%(X)-d_{ij}(X))^2,
+\label{eq:shepard}
+\end{equation}
+where the \(\hat d_{ij}^\%(X)\) are \emph{Shepard's rank images}, i.e.~the
 permutation of the \(\delta_{ij}\) that makes them monotone with the
 \(d_{ij}(X)\) (Shepard (1962a), Shepard (1962b), De Leeuw (2017b)).
 
-Minimizing the Shepard and Guttman single-phase loss functions is
+Minimizing the Shepard or Guttman single-phase loss functions is
 computationally more complicated than Kruskal's \emph{monotone regression}
 approach, mostly because the rank-image transformations are not
 differentiable, and there is no analog of \eqref{eq:partials} and of the
@@ -572,6 +597,61 @@ V^+=(V+\frac{1}{n}ee')^{-1}-\frac{1}{n}ee'
 where \(J\) is the centering matrix \(I-\frac{1}{n}ee'\), and thus
 \(V^+=\frac{1}{n}J\). The Guttman transform is then simply
 \(G(X)=n^{-1}B(X)X\).
+
+\section{Intermezzo: Explicit Normalization}\label{intermezzo-explicit-normalization}
+
+\[
+\sigma(X,\hat D)=\frac12\frac{\sum w_{ij}(\hat d_{ij}-d_{ij}(X))^2}{\sum w_{ij}d_{ij}^2(X)}
+\]
+Majorize
+
+\[
+\sigma(X,\hat D)\leq\frac12\frac{\eta^2(\hat D)-2\text{tr}\ X'V\overline{Y}+\text{tr}\ X'VX}{\text{tr}\ X'VX}=\frac{\omega(X,Y)}{\eta^2(X)}
+\]
+Stationary equations
+\[
+\eta^2(X)(VX-VG(Y))-\omega(X,Y)VX=V\{(\eta^2(X)-\omega(X,Y))X-\eta^2(X)\overline Y\}
+\]
+So at a minimum \(X\) is proportional to \(\overline{Y}\) or \(X=\alpha\overline{Y}\) for some \(\alpha\). For \ldots{} to be zero we must have
+\[
+\alpha(\alpha^2\eta^2(\overline Y)-(\eta^2(\hat D)-2\alpha\eta^2(\overline Y)+\alpha^2\eta^2(\overline Y))=\alpha^2\eta^2(\overline Y)
+\]
+which works out to be
+\[
+\alpha=\frac{\eta^2(\hat D)}{\eta^2(\overline Y)}
+\]
+\[
+\hat X=\frac{\eta^2(\hat D)}{\eta^2(\overline Y)}\ \overline{Y}
+\]
+The minimum is equal to
+
+\[
+\frac{-\frac{(\eta^2(\overline Y))^2}{\eta^2(\hat D)}+\eta^2(\overline Y)}{\eta^2(\overline Y)}=1-\frac{\eta^2(\overline Y)}{\eta^2(\hat D)}
+\]
+Use homogeneity of the Guttman transform.
+
+More generally suppose we update with
+\[
+X=\overline Y+\alpha(Y-\overline Y)
+\]
+Write
+\[
+\omega(X,Y)=\eta^2(\hat D)+\text{tr}\ (X-\overline Y)'V(X-\overline Y)-\eta^2(\overline Y)
+\]
+Thus if \(X(\alpha)=\overline Y+\alpha(Y-\overline Y)\) we have
+\[
+\omega(\alpha)=\eta^2(\hat D)+\alpha^2\text{tr}\ (Y-\overline Y)'V(Y-\overline Y)-\eta^2(\overline Y)
+\]
+and
+\[
+\eta^2(\alpha)=\eta^2(\overline Y)+2\alpha\text{tr}\ (Y-\overline Y)'V\overline Y+\alpha^2\text{tr}\ (Y-\overline Y)'V(Y-\overline Y)
+\]
+\[
+\omega(Y,Y)=\eta^2(\hat D)+\text{tr}\ (Y-\overline Y)'V(Y-\overline Y)-\eta^2(\overline Y)
+\]
+\[
+\frac{\omega(\alpha)}{\eta^2(\alpha)}\leq\sigma(Y)
+\]
 
 \section{Properties of Smacof Loss}\label{properties-of-smacof-loss}
 
@@ -913,6 +993,8 @@ Integral, I-splines
 \subsubsection{Ordinal MDS}\label{ordinal-mds}
 
 \subsubsection{Interval and Ratio MDS}\label{interval-and-ratio-mds}
+
+Additive constant
 
 \subsubsection{Cyclic Coordinate Decent}\label{cyclic-coordinate-decent}
 
